# financial_analyste_agent_using_langchain-

./: .env  README.md  app.py  docker-compose.yml  main.py  output.txt  pyproject.toml  pytest.ini  requierements.txt  test.py  test_charts.py  test_comparison.py
agents/: base_agent.py  financial_agent.py  orchestrator.py  simple_financial_agent.py  web_agent.py
api/: README.md  server.py  test_api.py
cache/: cache_manager.py
config/: settings.py
memory/: memory_manager.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_api.py  test_chart_tools.py  test_financial_tools.py  test_simple_financial_agent.py  test_web_search_tools.py
tools/: chart_tools.py  financial_tools.py  web_search_tools.py
